--- a/lecture/Ruby/20170422.md
+++ b/lecture/Ruby/20170422.md
@@ -23,6 +23,25 @@ https://ja.wikipedia.org/wiki/GitHub
 #### github
 github.com/
 
+## 提出ルール
+3 年生・4 年生授業では課題(または作品)の提出は GitHub サーバで行います。
+
+### 手順
+1. 授業内で指定している GitHub リポジトリを自身のアカウントリポジトリへフォークし
+ます
+2. 課題をローカル環境で回答します。
+3. 自身のアカウントリポジトリへプッシュします
+4. 自信のアカウントリポジトリより指定リポジトリへプルリクエストで提出をします
+
+提出した課題に問題がなければ承認します。 提出物に問題(他学生のコードをコピー・提出期限超え・課題が期待値に達していない) がある場合はプルリクエストを破棄します。 破棄の場合は理由をコメントで残すので、確認して再提出を行ってください。
+
+### 提出期限
+基本は課題を与えられた授業の当日中に提出すること。(次回授業までが期限) ※当日欠席または課題作成が間に合わない場合は、次回授業までに提出すること。 期限を過ぎてからの提出は基本プルリクエストを承認しません。 再提出の場合は、プルリクエストを破棄されてから次回授業まで(授業がない場合は 7 日) の提出とします。
+
+### 成績
+前期・後期にそれぞれ行った課題数(授業により変動あり)の指定数以下の提出の場合は、 出席率などに関わらず補習(D 判定)とします。
+授業の態度・姿勢を評価するため、考えてもできない課題の場合も、できたところまでを 評価するため、提出は必ずおこなうこと。
+
 ## Reference
 https://git-scm.com/docs
 
