--- a/lecture/Ruby/20170513.md
+++ b/lecture/Ruby/20170513.md
@@ -1,15 +1,16 @@
 # レクチャーノート
 
 ## Todo
- - 課題の提出（PullRequest・提出期限・提出リポジトリ・再提出方法）
+ - 課題の提出（PullRequest・提出期限・提出リポジトリ・再提出方法）前回の続き
  - Ruby実行方法(irb/テキストエディタ)
+ - Rubyの出力について（print,puts,pの違い）
+ - コメント
 
 ## Lecture
 
 ### Ruby概要
-Rubyの出力について（print,puts,pの違い）
 
-#### 練習
+#### Rubyの出力について（print,puts,pの違い） 
 
 ```
 # 改行コードなし（入れる場合は手動）
@@ -24,12 +25,15 @@ puts 'hello\nworld'
 
 test = "hello"
 print"out:",test,"world"
+```
 
+#### コメント
+
+```
 =begin
 コメント複数行の場合
 一行の場合は＃でコメントアウトできます
 =end
-
 ```
 
 ## Reference
