--- a/lecture/Ruby/20170513.md
+++ b/lecture/Ruby/20170513.md
@@ -4,6 +4,7 @@
  - 課題の提出（PullRequest・提出期限・提出リポジトリ・再提出方法）前回の続き
  - Ruby実行方法(irb/テキストエディタ)
  - Rubyの出力について（print,puts,pの違い）
+ - シングルクォート・ダブルクォート
  - コメント
 
 ## Lecture
@@ -20,11 +21,15 @@ puts "hello world"
 # デバッグ用（型を含み出力）
 p "hello world"
 
-puts "hello\nworld"
-puts 'hello\nworld'
-
 test = "hello"
 print"out:",test,"world"
+```
+
+#### シングルクォート・ダブルクォート
+
+```
+puts "hello\nworld"
+puts 'hello\nworld'
 ```
 
 #### コメント
