--- a/lecture/Ruby/20170520.md
+++ b/lecture/Ruby/20170520.md
@@ -16,14 +16,25 @@
 #### 変数（グローバル・ローカル・インスタンス・クラス）
 
 ```
+a = 1,
+a,b,c = 1,2,3
+a,b,c = 1,2 
+a,b,c = 1,2,3,4
+```
 
+変数の値の入れ替えサンプル
+```
+a,b = 1,2
+a,b = b,a
+p [a,b]
 ```
 
 #### ファイルパラメータの受け取り
 
-
+ARGV配列で取得可能
 ```
-
+# 1つ目のパラメータの場合
+ARGV[0]
 ```
 
 #### 変数の代入
@@ -55,24 +66,44 @@ MAX = 0
 
 #### if文
 
-
+条件分岐を行う。
 ```
-
+a = 10
+b = 20
+if a > b
+  puts "a > b"
+elsif a < b
+  puts "a < b"
+else 
+  puts " a equal b"
+end
 ```
 
 #### unless文
 
-
+条件分岐を行う。（条件がfalseのときのifと同様）
 ```
-
+unless a > b
+  puts "a < b"
+end
 ```
 
 #### case文
 
-
+条件分岐を行う。（複数項目で切り替える感が強い場合に使う）
+多言語のswitch文のようでそうではない面も持つ。※興味あればgoogleへ
+```
+product = "apple"
+case product 
+when "apple" , "APPLE"
+  puts "is apple"
+when "melon"
+  puts "is melon"
+else 
+  puts "other"
+end
 ```
 
-```
 ## Reference
 https://docs.ruby-lang.org/ja/2.4.0/doc/index.html
 
