--- a/lecture/Ruby/20170520.md
+++ b/lecture/Ruby/20170520.md
@@ -8,6 +8,7 @@
  - if文
  - unless文
  - case文
+ - イコール(==,===,equal?)
 
 ## Lecture
 
@@ -91,7 +92,7 @@ end
 #### case文
 
 条件分岐を行う。（複数項目で切り替える感が強い場合に使う）
-多言語のswitch文のようでそうではない面も持つ。※興味あればgoogleへ
+多言語のswitch文のようでそうではない面も持つ。※気になったらgoogleへ
 ```
 product = "apple"
 case product 
@@ -103,6 +104,30 @@ else
   puts "other"
 end
 ```
+
+#### イコール(==,===,equal?)
+
+挙動に違いがあるため注意
+(==,===は挙動は同じと覚えておいて良い ※気になったらgoogleへ)
+```
+puts "test".object_id
+puts "test".object_id
+
+a = "test"
+b = a
+c = "test"
+puts a.equal?(b)
+puts "a:",a.object_id
+puts "b:",b.object_id
+puts "c:",c.object_id
+
+print "a equal c:",a.equal?(c)
+print "\n"
+print "a == c:",a == c
+print "\n"
+print "a === c:",a === c
+```
+
 
 ## Reference
 https://docs.ruby-lang.org/ja/2.4.0/doc/index.html
