--- a/lecture/Ruby/20170603.md
+++ b/lecture/Ruby/20170603.md
@@ -1,26 +1,108 @@
 # レクチャーノート(作成中)
 
 ## Todo
- - メソッド
- - クラス
+ - メソッド構文
+ - クラス構文
 
 ## Lecture
 
 ### Ruby学習
 
-#### 
+#### メソッド構文
+
+##### メソッド定義
+```
+def hello()
+  puts "hello"
+end
+
+hello()
+hello #parameterが１つもない場合は()は省略可
+```
+
+##### デフォルト引数
+```
+def hello(mes1="hoge1",mes2="hoge2")
+  print "hello:",mes1," and ",mes2,"\n"
+end
+
+hello("suzuki","sato")
+hello("suzuki")
+hello
+```
+
+##### キーワード引数
 
 ```
+def total(subtotal:1000,tax:80,discount:100)
+  return subtotal + tax - discount 
+end
+
+p total
+p total(subtotal:1500)
+p total(discount:200)
+p total(discount:300,subtotal:3000)
+p total(discount:300,subtotal:3000,tax:200)
+
 ```
 
-#### 
+#### クラス構文
 
 ```
-```
+# クラス
+class Book
 
-#### 
+  @@book_count = 0 # クラス変数は先頭@@
+  
+  attr_accessor :title # 読み書き
+  #attr_reader :title # 読み込み
+  #attr_writer :title # 書き込み
+  
+  # getter
+  #def title
+  #  @title
+  #end
+  
+  # setter
+  #def title=(value)
+  #  @title = value
+  #end
 
-```
+  # イニシャライザ（コンストラクタ）
+  def initialize(title = "book")
+    @title = title # インスンタンス変数は先頭@
+    @@book_count += 1
+  end
+  
+  public # 以降下はすべてpublic
+  
+  # メソッド（インスタンスメソッド）
+  def debug()
+    puts "title:#{self.title}"  #@titleと同じ
+  end
+  
+  #public :debug # debugメソッドをpublicへ
+  
+  # メソッド（クラスメソッド）
+  def Book.count
+    @@book_count
+  end
+end
+
+# インスタンス生成(book1)
+book1 = Book.new("hoge")
+book1.debug
+p book1.title
+book1.title="hogehoge"
+p book1.title
+
+print "count:",Book.count,"\n"
+
+# インスタンス生成(book2)
+book2 = Book.new
+book2.debug
+
+print "count:",Book.count,"\n"
 ```
 
 
