--- a/lecture/Ruby/20170603.md
+++ b/lecture/Ruby/20170603.md
@@ -1,16 +1,17 @@
-# レクチャーノート(作成中)
+# レクチャーノート
 
 ## Todo
- - メソッド構文
+ - メソッド定義
+ - デフォルト引数
+ - キーワード引数
+ - return文
  - クラス構文
 
 ## Lecture
 
-### Ruby学習
+### メソッド構文
 
-#### メソッド構文
-
-##### メソッド定義
+#### メソッド定義
 ```
 def hello()
   puts "hello"
@@ -20,7 +21,7 @@ hello()
 hello #parameterが１つもない場合は()は省略可
 ```
 
-##### デフォルト引数
+#### デフォルト引数
 ```
 def hello(mes1="hoge1",mes2="hoge2")
   print "hello:",mes1," and ",mes2,"\n"
@@ -31,7 +32,7 @@ hello("suzuki")
 hello
 ```
 
-##### キーワード引数
+#### キーワード引数
 
 ```
 def total(subtotal:1000,tax:80,discount:100)
@@ -46,7 +47,19 @@ p total(discount:300,subtotal:3000,tax:200)
 
 ```
 
-#### クラス構文
+### return文
+
+return文を省略した場合は、最後の処理結果を返す
+```
+def max(a,b)
+  a > b ? a : b
+end
+
+p max(10,5)
+p max(5,10)
+```
+
+### クラス構文
 
 ```
 # クラス
