--- a/lecture/Ruby/20170603.md
+++ b/lecture/Ruby/20170603.md
@@ -4,6 +4,7 @@
  - メソッド定義
  - デフォルト引数
  - キーワード引数
+ - 可変引数
  - return文
  - クラス構文
 
@@ -45,6 +46,27 @@ p total(discount:200)
 p total(discount:300,subtotal:3000)
 p total(discount:300,subtotal:3000,tax:200)
 
+```
+
+### 可変引数
+```
+def print(*args)
+  p args
+end
+
+print("hoge")
+print("hoge","hoge")
+print("hoge","hoge","hoge")
+```
+
+```
+def print(mes1,*mes2,mes3)
+  p [mes1,mes2,mes3]
+end
+
+print("hoge1","hoge2","hoge3")
+print("hoge1","hoge2","hoge3","hoge4")
+print("hoge1","hoge2","hoge3","hoge4","hoge5")
 ```
 
 ### return文
