--- a/lecture/Ruby/20170520.md
+++ b/lecture/Ruby/20170520.md
@@ -12,7 +12,7 @@
 
 ## Lecture
 
-### Ruby構文学習
+### 変数/定数
 
 #### 変数（グローバル・ローカル・インスタンス・クラス）
 
@@ -64,6 +64,8 @@ x = 0
 # 定数
 MAX = 0
 ```
+
+### 制御文 
 
 #### if文
 
