--- a/lecture/Ruby/20170527.md
+++ b/lecture/Ruby/20170527.md
@@ -1,27 +1,112 @@
 # レクチャーノート(作成中)
 
 ## Todo
- - 
+ - 繰り返し文（times,for,each,while,loop,until）
 
 ## Lecture
 
-### Ruby学習
+### 繰り返し文
 
-#### 
-
-```
-```
-
-#### 
+#### times
 
 ```
+5.times do 
+  puts "hello"
+end
+
+5.times {
+  puts "hello"
+}
+
+5.times do |i|
+  puts "#{i}回目"
+end
 ```
 
-#### 
+```
+from = 1
+to = 10
+sum = 0
+(to - from + 1).times do |i|
+  sum = sum + (i + from)
+end
+puts sum
+```
+
+#### for
 
 ```
+for i in 1..5
+  puts "#{i}回目"
+end
+
+names = ["test1","test2","test3"]
+for name in names
+  puts name
+end
 ```
 
+```
+sum = 0
+for i in from..to
+  sum = sum + i
+end
+puts sum
+```
+
+#### each
+
+```
+names.each do |name|
+  puts name
+end
+```
+
+#### while
+
+```
+i = 5
+while i != 50 do
+  puts i
+  i += 10
+  #if i > 50
+  #  break
+  #end
+  break if i > 50 # loopを抜ける
+  next if i == 15 # loopを抜けずに次に進む
+end
+```
+
+#### loop
+
+```
+i = 1
+loop do
+  puts "loop ..."
+  i += 1
+  break if i == 5
+end
+
+i = 0
+names.each do |name|
+  i += 1
+  redo if i == 2
+  p [i,name]
+end
+```
+
+#### until
+
+```
+i = 1
+sum =0
+until sum >= 50
+  sum += i
+  i += 1
+end
+puts sum 
+
+```
 
 ## Reference
 https://docs.ruby-lang.org/ja/2.4.0/doc/index.html
