--- a/lecture/Ruby/20170617.md
+++ b/lecture/Ruby/20170617.md
@@ -4,6 +4,7 @@
  - alias / undef
  - 継承
  - モジュール
+ - ancestors / superclassメソッド
  - MIX-IN
 
 ## Lecture
@@ -28,6 +29,18 @@
 ```
 
 ```
+
+### ancestors / superclassメソッド
+
+#### ancestors
+```
+```
+http://ref.xaio.jp/ruby/classes/module/ancestors
+
+#### superclass
+```
+```
+http://ref.xaio.jp/ruby/classes/class/superclass
 
 ### MIX-IN
 
