--- a/lecture/Ruby/20170617.md
+++ b/lecture/Ruby/20170617.md
@@ -1,29 +1,20 @@
 # レクチャーノート
 
 ## Todo
- - alias / undef
+ - alias
  - 継承
  - モジュール
  - ancestors / superclassメソッド
  - MIX-IN
+ - 代入演算子
+ - succ
+ - 論理演算子
+ - 条件演算子
+ - 範囲演算子
 
 ## Lecture
 
-### alias / undef
-
-#### 
-```
-
-```
-
-### 継承
-
-#### 
-```
-
-```
-
-### モジュール
+### alias
 
 #### 
 ```
@@ -47,6 +38,74 @@ http://ref.xaio.jp/ruby/classes/class/superclass
 #### 
 ```
 
+```
+
+### 継承
+
+#### 
+```
+
+```
+
+### モジュール
+
+#### 
+```
+
+```
+
+### 代入演算子
+
+```
+#a = a + 1 → a++ rubyはインクリメント演算子は禁止
+a = 1
+a += 1
+#b = b * 2
+b = 1
+b *= 2
+```
+
+### succ
+
+インクリメント用のsuccメソッド
+A→B 1→2
+```
+a = 1
+print "a=",a.succ,"\n"
+```
+http://ref.xaio.jp/ruby/classes/string/succ  
+
+### 論理演算子
+
+or = 条件1 || 条件2  
+and = 条件1 && 条件2
+```
+x = 1
+y = 1
+if (x != nil && y != nil)
+	puts x + y
+end
+```
+
+### 条件演算子
+
+```
+a=4
+b=8
+p a > b ? a : b
+```
+
+### 範囲演算子
+
+```
+p (2..5).to_a
+p (2...5).to_a
+
+sum = 0
+for i in 5..10
+ sum += i
+end
+puts "sum:",sum
 ```
 
 ## Reference
