--- a/lecture/Ruby/20170617.md
+++ b/lecture/Ruby/20170617.md
@@ -3,9 +3,8 @@
 ## Todo
  - alias
  - 継承
- - モジュール
+ - モジュール(MIX-IN)
  - ancestors / superclassメソッド
- - MIX-IN
  - 代入演算子
  - succ
  - 論理演算子
@@ -49,9 +48,52 @@ http://ref.xaio.jp/ruby/classes/class/superclass
 
 ### モジュール
 
-#### 
 ```
+module Math
+  def add(x,y)
+    x + y
+  end
+  def average(x,y)
+    (x + y) / 2
+  end
+  def debug()
+    puts "math debug"
+  end
+  
+  module_function :add,:average
+end
 
+module SumModule
+  def debug()
+    puts "sum-module debug"
+  end
+end
+
+class TestModule
+  include Math # Mix-in:クラスからモジュールを呼ぶ
+  include SumModule
+  
+  def showAdd(x,y)
+    result = add(x,y)
+    print "add:",x,"and",y,"is",result,"\n"
+  end
+  def showAverage(x,y)
+    result = average(x,y)
+    print "average:",x,"and",y,"is",result,"\n"
+  end
+  def showDebug()
+     debug
+  end
+end
+
+test = TestModule.new
+test.showAdd(10,8)
+test.showAverage(100,50)
+
+p TestModule.ancestors
+test.showDebug
+
+puts Math.average(70,40)
 ```
 
 ### 代入演算子
