--- a/lecture/Ruby/20170617.md
+++ b/lecture/Ruby/20170617.md
@@ -2,9 +2,9 @@
 
 ## Todo
  - alias
+ - ancestors / superclassメソッド
  - 継承
  - モジュール(MIX-IN)
- - ancestors / superclassメソッド
  - 代入演算子
  - succ
  - 論理演算子
@@ -15,39 +15,87 @@
 
 ### alias
 
-#### 
+メソッドに別名を指定する
 ```
-
+alias new_method old_method
 ```
 
 ### ancestors / superclassメソッド
 
 #### ancestors
+
+すべての継承関係を取得
 ```
+object.ancestors
 ```
 http://ref.xaio.jp/ruby/classes/module/ancestors
 
 #### superclass
+
+親クラスを取得
 ```
+object.superclass
 ```
 http://ref.xaio.jp/ruby/classes/class/superclass
 
-### MIX-IN
-
-#### 
-```
-
-```
-
 ### 継承
 
-#### 
+```
+class Book
+  
+  @@book_count = 0 # クラス変数は先頭@@
+  
+  attr_accessor :title # 読み書き
+
+  # イニシャライザ（コンストラクタ）
+  def initialize(title = "book")
+    @title = title # インスンタンス変数は先頭@
+    @@book_count += 1
+  end
+  
+  public # 以降下はすべてpublic
+  
+  # メソッド（インスタンスメソッド）
+  def debug()
+    puts "title:#{self.title}"  #@titleと同じ
+  end
+  
+  #public :debug # debugメソッドをpublicへ
+  
+  # メソッド（クラスメソッド）
+  def Book.count
+    @@book_count
+  end
+end
+
+class Manga < Book
+  alias output_debug debug # エイリアス（別名）指定
+
+  def initialize()
+    #@title = "hello"
+    super("child")
+  end
+end
+
+manga = Manga.new
+class << manga # 特異クラス
+  def mangaPrint()
+    puts "manga print"
+  end
+end
+manga.mangaPrint
+
+manga.debug
+manga.output_debug
+
 ```
 
-```
-
-### モジュール
-
+### モジュール(MIX-IN)
+module  
+- インスタンを作れない  
+- 継承ができない  
+  
+mix-inとはモジュールをクラスにincludeすること
 ```
 module Math
   def add(x,y)
