--- a/lecture/Ruby/20170624.md
+++ b/lecture/Ruby/20170624.md
@@ -1,7 +1,10 @@
 # レクチャーノート
 
 ## Todo
- - 例外処理(begin,rescue,raise)
+ - 例外処理
+  - begin,rescue,end
+  - retry
+  - ensure
 
 ## Lecture
 
@@ -12,11 +15,21 @@
 alias new_method old_method
 ```
 
-### 例外処理(begin,rescue,raise)
+### 例外処理
 
 https://docs.ruby-lang.org/ja/latest/class/Exception.html
 
-#### begin,rescue,raise
+#### begin,rescue,end
+
+```
+```
+
+#### retry
+
+```
+```
+
+#### ensure
 
 ```
 ```
