--- a/lecture/Ruby/20170624.md
+++ b/lecture/Ruby/20170624.md
@@ -10,23 +10,62 @@
 
 ### 例外処理
 
+例外発生時に例外処理を行うための構文  
+
 https://docs.ruby-lang.org/ja/latest/class/Exception.html
 
 #### begin,rescue,end
 
+beginスコープで例外が発生した場合はrescueでキャッチする  
+
+format
 ```
+begin
+  # 処理
+rescue
+  # エラー処理
+end
 ```
 
 #### retry
 
+retryは再度beginに処理を戻す  
+
+format
 ```
+begin
+  # 処理
+rescue
+  retry # beginに戻る
+end
 ```
 
 #### ensure
 
+ensureは終了処理を行う。（例外がおきた場合、おきない場合のどちらの場合も必ずとおる）  
+
+format
 ```
+begin
+  # 処理
+rescue
+  # エラー処理
+ensure
+  # 終了処理
+end
 ```
 
+外部リソースは必ずensureでcloseすること
+```
+f = File.open('testfile')
+begin
+  # 処理
+rescue
+  # エラー処理
+ensure
+  f.close if f
+end
+```
 
 ## Reference
 https://docs.ruby-lang.org/ja/2.4.0/doc/index.html
