--- a/lecture/Ruby/20170527.md
+++ b/lecture/Ruby/20170527.md
@@ -7,6 +7,19 @@
 
 ### 繰り返し文
 
+#### redo,next,break
+
+ループ内で利用できるキーワードについてbreak,next,redoがある。  
+
+break  
+繰り返しを中断しループを抜ける  
+
+next  
+現在の回を飛ばし次の回のループに移る  
+
+redo  
+同じ条件で、ループをやり直す  
+
 #### times
 
 ```
