--- a/lecture/Ruby/20170624.md
+++ b/lecture/Ruby/20170624.md
@@ -5,6 +5,8 @@
    - begin,rescue,end
    - retry
    - ensure
+   - 数値チェックメソッドを作る
+ - ブロック
 
 ## Lecture
 
@@ -65,6 +67,73 @@ rescue
 ensure
   f.close if f
 end
+```
+
+#### 数値チェックメソッドを作る
+
+rubyでは文字列をto_iで0として扱う 
+```
+"hoge".to_i
+```
+
+数値で処理を分ける場合は数値チェックメソッドを用意するとよい  
+```
+def isNumber?(str)
+  begin
+    Integer(str)
+    true
+  rescue
+    false
+  end
+end
+```
+
+### 自作エラークラス
+
+```
+# 自作エラークラスを用意
+class DBConnectionError < StandardError
+  def message 
+    "database connection failure... orz"
+  end
+end
+
+# database接続メソッドの模倣
+def database_connection
+  error = true # 強制的にerrorにする
+  raise DBConnectionError if error
+  puts "database connection success!"
+end
+
+# 接続テスト
+begin
+  database_connection
+rescue DBConnectionError => e
+  puts e.message
+end
+```
+
+### ブロック
+ブロック = 引数と同様にブロックもメソッドに渡すこと可能  
+
+```
+def total(from,to)
+  result = 0
+  from.upto(to) do |num|
+    if block_given? 
+    # block
+      result += yield(num)
+    else 
+    # no block
+      result += num  
+    end
+  end
+  result
+end
+
+p "total(1,5) => ",total(1,5)
+p "total(1,5){|num| num * 2} => ",total(1,5){|num| num * 2}
+
 ```
 
 ## Reference
