--- a/lecture/Ruby/20170624.md
+++ b/lecture/Ruby/20170624.md
@@ -1,14 +1,24 @@
 # レクチャーノート
 
 ## Todo
+ - getsメソッド
  - 例外処理
    - begin,rescue,end
    - retry
    - ensure
    - 数値チェックメソッドを作る
+   - 自作エラークラス
  - ブロック
 
 ## Lecture
+
+### gets
+
+ユーザの入力を取得する  
+```
+gets.chomp
+```
+chompメソッドで最終行の改行文字を除去する  
 
 ### 例外処理
 
@@ -88,8 +98,27 @@ def isNumber?(str)
 end
 ```
 
-### 自作エラークラス
+#### エラーを使ったサンプル
+```
+puts "please enter csv file"
+csv = gets.chomp
 
+begin
+  file = File.open(csv)
+  file.each_line do |line|
+    col = line.split(",")
+    puts "id :#{col[0]}"
+    puts "name :#{col[1]}"
+    puts "disc :#{col[2]}"
+  end
+rescue => e
+  print "error:",e.message
+end
+```
+
+#### 自作エラークラス
+
+StandardErrorを継承して自作エラークラスを作成する  
 ```
 # 自作エラークラスを用意
 class DBConnectionError < StandardError
